--- a/blocks/header.css
+++ b/blocks/header.css
@@ -53,6 +53,11 @@
   height: 30px;
   background-color: #292626;
   color: #fff;
+  cursor: pointer;
+}
+
+.header__button:hover {
+  background-color: #504b4b;
 }
 
 .header__button-back {
@@ -64,6 +69,7 @@
 }
 
 .header__button-arrow {
+  margin: 0 5px;
 }
 
 .header__button-arrow_flip {
