--- a/blocks/reputation.css
+++ b/blocks/reputation.css
@@ -10,19 +10,27 @@
 
 .reputation__cards {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 40px;
+  margin: auto;
 }
 
 .reputation__card {
-  border: solid 1px grey;
-  max-width: 500px;
+  border: solid 1px rgb(160, 155, 155);
+  border-radius: 3px;
+  max-width: 400px;
+  padding: 20px;
+  margin: auto;
 }
 
 .reputation__card-image {
+  width: 35px;
 }
 
 .reputation__card-title {
+  font-size: 20px;
 }
 
 .reputation__card-paragraph {
+  color: rgb(160, 155, 155);
 }
