--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,4 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/header.css);
 @import url(../blocks/reputation.css);
+@import url(../blocks/about.css);
