--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,4 @@
 @import url(../blocks/header.css);
 @import url(../blocks/reputation.css);
 @import url(../blocks/about.css);
+@import url(../blocks/services.css);
