--- a/blocks/services.css
+++ b/blocks/services.css
@@ -1,20 +1,61 @@
 .services {
+  background-color: #f0ebeb;
 }
 
 .services__title {
+  text-align: center;
+  font-size: 45px;
+  padding-top: 30px;
 }
 
 .services__cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 50px;
+  gap: 80px;
+  row-gap: 50px;
+  justify-content: center;
 }
 
 .services__card {
+  width: 350px;
+  background-color: #fff;
+  height: 200px;
+}
+
+.services__card:nth-child(even) {
+  background-color: rgb(47, 78, 163);
+  color: #fff;
 }
 
 .services__image {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 25px;
 }
 
-.services__line {
+.services__line-blue {
+  background-color: rgb(47, 78, 163);
+  width: 60px;
+  height: 2px;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.services__line-white {
+  background-color: #ff;
+  width: 60px;
+  height: 2px;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.services__line:nth-child(even) {
+  background-color: #fff;
 }
 
 .services__subtitle {
+  text-align: center;
 }
