--- a/blocks/about.css
+++ b/blocks/about.css
@@ -41,4 +41,9 @@
   padding: 0 15px;
   cursor: pointer;
   margin-top: 30px;
+  transition: transform 0.3s ease;
+}
+
+.about__button:hover {
+  transform: scale(1.05);
 }
