--- a/blocks/services.css
+++ b/blocks/services.css
@@ -22,6 +22,7 @@
   width: 350px;
   background-color: #fff;
   height: 200px;
+  color: rgb(47, 78, 163);
 }
 
 .services__card:nth-child(even) {
@@ -37,26 +38,47 @@
   margin-top: 25px;
 }
 
-.services__line-blue {
+.services__line {
+  width: 60px;
+  height: 2px;
+  margin: 20px auto 0;
+}
+
+.services__card:nth-of-type(even) .services__line {
+  background-color: #fff;
+}
+.services__card:nth-of-type(odd) .services__line {
   background-color: rgb(47, 78, 163);
-  width: 60px;
-  height: 2px;
-  margin: auto;
-  margin-top: 20px;
-}
-
-.services__line-white {
-  background-color: #fff;
-  width: 60px;
-  height: 2px;
-  margin: auto;
-  margin-top: 20px;
-}
-
-.services__line:nth-child(even) {
-  background-color: #fff;
 }
 
 .services__subtitle {
   text-align: center;
+}
+
+@media (min-width: 895px) and (max-width: 1324px) {
+  .services__card:nth-child(1),
+  .services__card:nth-child(4),
+  .services__card:nth-child(5) {
+    background-color: #fff;
+    color: rgb(47, 78, 163);
+  }
+
+  .services__card:nth-child(2),
+  .services__card:nth-child(3),
+  .services__card:nth-child(6) {
+    background-color: rgb(47, 78, 163);
+    color: #fff;
+  }
+
+  .services__card:nth-of-type(1) .services__line,
+  .services__card:nth-of-type(4) .services__line,
+  .services__card:nth-of-type(5) .services__line {
+    background-color: rgb(47, 78, 163);
+  }
+
+  .services__card:nth-of-type(2) .services__line,
+  .services__card:nth-of-type(3) .services__line,
+  .services__card:nth-of-type(6) .services__line {
+    background-color: #fff;
+  }
 }
