--- a/blocks/quote.css
+++ b/blocks/quote.css
@@ -11,3 +11,18 @@
   text-align: center;
   font-size: 20px;
 }
+
+.quote__form {
+}
+
+.quote__fieldset {
+  border: none;
+}
+
+.quote__label {
+}
+
+.quote__input {
+}
+.quote__textarea {
+}
