--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,5 @@
 @import url(../blocks/reputation.css);
 @import url(../blocks/about.css);
 @import url(../blocks/services.css);
-@import url(../blocks/quote.css);
+@import url(../blocks/contact.css);
 @import url(../blocks/footer.css);
