--- a/blocks/contact.css
+++ b/blocks/contact.css
@@ -47,6 +47,13 @@
 .contact__button {
   position: absolute;
   bottom: -20px;
+  border: none;
+  background-color: rgb(47, 78, 163);
+  color: #fff;
+  height: 40px;
+  border-radius: 3.5px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .contact__map {
