--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,5 @@
 .header {
+  max-height: 80vh;
 }
 
 .header__card {
@@ -6,9 +7,25 @@
   display: flex;
 }
 
-.header__image {
+.header__image-parent {
+  height: 80vh;
   width: 100vw;
-  height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  background-color: #000;
+}
+
+.header__image {
+  /*width: 100vw;
+  height: 800px;*/
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .header__title {
