--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -17,9 +17,10 @@
 }
 
 .nav__link {
-  list-style-type: none;
   align-self: center;
   cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 
 .nav__link:hover {
