--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,7 @@
 @import url(../blocks/page.css);
 @import url(../blocks/nav.css);
 @import url(../blocks/header.css);
-@import url(../blocks/reputation.css);
 @import url(../blocks/about.css);
-@import url(../blocks/services.css);
 @import url(../blocks/contact.css);
 @import url(../blocks/footer.css);
+@import url(../services.css);
