Change logo on header in services section

--- a/services.css
+++ b/services.css
@@ -104,7 +104,8 @@ body {
   left: 50%;
   top: 35%;
   transform: translate(-50%, -50%);
-  width: 270px;
+  /*width: 270px;*/
+  width: 450px;
 }
 
 /* -------------------------------------------------------------------------- */
