Get rid of original code and replace with service.html

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -3,8 +3,6 @@
   margin: auto;
 }
 
-.page__content {
-  width: 100%;
-  margin: 0 auto;
-  max-width: 880px;
+.page__section {
+  padding: 0 15px;
 }
