--- a/blocks/contact.css
+++ b/blocks/contact.css
@@ -1,5 +1,6 @@
 .contact {
   padding-top: 60px;
+  padding: 60px 20px 0;
 }
 
 .contact__title {
@@ -12,6 +13,13 @@
   font-size: 20px;
 }
 
+.contact__display {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  gap: calc(100% - 80%);
+}
+
 .contact__form {
 }
 
@@ -20,9 +28,6 @@
   flex-direction: column;
   border: none;
   position: relative;
-}
-
-.contact__label {
 }
 
 .contact__input {
@@ -57,6 +62,6 @@
 }
 
 .contact__map {
-  width: 100%;
-  margin-top: 40px;
+  width: 700px;
+  height: 700px;
 }
