--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,93 +1,109 @@
 .header {
-  max-height: 80vh;
+  background-image: url(/images/copy.png);
+  height: 75vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: -2;
+  background-attachment: fixed;
 }
 
-.header__card {
-  position: relative;
-  display: flex;
-}
-
-.header__image-parent {
-  height: 80vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-  background-color: #000;
-}
-
-.header__image {
+.header__overlay {
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 75vh;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
-  object-fit: cover;
-  object-position: 50% 50%;
-}
-
-.header__title {
-  font-size: 72px;
-  font-weight: 600;
-  max-width: 600px;
   position: absolute;
-  color: #fff;
-  display: flex;
-  align-self: center;
-  padding: auto;
-  left: 10%;
+  content: "";
+  z-index: 1;
 }
 
-.header__box {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: #fff;
-  background-color: rgb(47, 78, 163);
-  padding: 12px 25px 0;
-  max-width: 300px;
+.header__links {
   display: flex;
-  flex-direction: column;
+  gap: 35px;
+  justify-content: center;
+  z-index: 2;
 }
 
-.header__subtitle {
-  margin: 0;
+.header__link {
+  color: #fff;
+  text-decoration: none;
+  margin-top: 20px;
   font-size: 20px;
-  text-align: center;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+  z-index: 2;
+  font-weight: 500;
+  position: relative;
 }
 
-.header__paragraph {
-  text-align: center;
-  padding-bottom: 40px;
+.header__link:after {
+  content: "";
+  position: absolute;
+  background-color: #fff;
+  height: 3px;
+  left: 0;
+  bottom: -6px;
+  transition: 0.3s ease-in-out;
+  width: 0;
+}
+
+.header__link:hover {
+  color: #d6d0d0;
+}
+
+.header__link:hover:after {
+  width: 100%;
 }
 
 .header__button {
-  position: absolute;
-  bottom: 0;
-  width: 50%;
-  border: none;
-  height: 30px;
-  background-color: #292626;
   color: #fff;
+  margin-top: 18px;
+  font-size: 20px;
   cursor: pointer;
+  z-index: 2;
+  font-weight: 600;
+  background: none;
+  border: 2px solid #fff;
+  transition: 0.8s;
+  position: relative;
+  overflow: hidden;
 }
 
 .header__button:hover {
-  background-color: #504b4b;
+  color: rgb(47, 78, 163);
 }
 
-.header__button-back {
+.header__button::before {
+  content: "";
+  position: absolute;
   left: 0;
+  width: 100%;
+  height: 0%;
+  background: #fff;
+  z-index: -1;
+  transition: 0.8s;
+  top: 0;
+  border-radius: 0 0 50% 50%;
 }
 
-.header__button-next {
-  right: 0;
+.header__button:hover::before {
+  height: 180%;
 }
 
-.header__button-arrow {
-  margin: 0 5px;
+.header__logo {
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -50%);
+  width: 450px;
 }
 
-.header__button-arrow_flip {
-  transform: scaleX(-1);
+@media screen and (max-width: 740px) {
+  .header__link {
+    font-size: 16px;
+  }
+  .header__button {
+    font-size: 16px;
+  }
 }
