--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(/images/copy.png);
+  background-image: url(/images/Backgroundimage.png);
   height: 75vh;
   background-repeat: no-repeat;
   background-position: center;
