--- a/blocks/contact.css
+++ b/blocks/contact.css
@@ -1,6 +1,5 @@
 .contact {
   padding-top: 60px;
-  padding: 60px 20px 0;
 }
 
 .contact__title {
@@ -11,13 +10,6 @@
 .contact__subtitle {
   text-align: center;
   font-size: 20px;
-}
-
-.contact__display {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-  gap: calc(100% - 80%);
 }
 
 .contact__form {
@@ -62,6 +54,8 @@
 }
 
 .contact__map {
-  width: 700px;
-  height: 700px;
+  width: 100vw;
+  height: 600px;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
